style: update modal max-height, avoid unexpected behaviour on mobile preview

--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -50,7 +50,7 @@
   min-width: 250px;
   max-width: 95vw;
   display: flex;
-  max-height: 95vh;
+  max-height: 100vh;
   flex-direction: column;
   min-height: 200px;
 }
